[package]
name = "rust_journal"
version = "0.1.0"
authors = ["Christopher Codrington <chcodrington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0"
